--- a/README
+++ b/README
@@ -2,9 +2,9 @@ Name: Gurtaj Khabra
 CMPUT 274 Fa21
 Assignment 1: OOClassifier
 
-This assignment was completed for the fall term in my 2nd year at
-university. The primary focus was to understand and apply the concepts
-of object-oriented programming we had been learning throughout the semester.
+This program This assignment was completed for the fall term in my 2nd year at
+university. The primary focus was to apply the concepts of object-oriented
+programming which we had been learning throughout the semester.
 
 Included Files:
 	* ooclassifier.py
